_deprecated/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-test
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pihole.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
